docs/styles.css
/* ... */
.most-viewed-date {
  font-family: Optima;
  font-size: 0.875rem;
  line-height: 1rem;
  --tw-text-opacity: 1;
  color: rgb(158 158 158 / var(--tw-text-opacity));
}

.most-viewed-body {
  font-family: Optima;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.read-more {
  width: 180px;
  border-bottom-width: 1px;
  --tw-border-opacity: 1;
  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
  padding-bottom: 0.5rem;
  padding-top: 2.5rem;
  font-family: Branch;
  font-size: 0.875rem;
  text-transform: uppercase;
  line-height: 1.25rem;
  --tw-text-opacity: 1;
  color: rgb(72 72 72 / var(--tw-text-opacity));
}

.form-input {
  width: 100%;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(209 213 219 / var(--tw-border-opacity));
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  font-family: Optima;
  font-size: 16px;
  line-height: 18px;
}

.form-input::-moz-placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(0 0 0 / var(--tw-placeholder-opacity));
}

.form-input::placeholder {
  --tw-placeholder-opacity: 1;
  color: rgb(0 0 0 / var(--tw-placeholder-opacity));
}

.page-header {
  position: absolute;
  font-family: Branch;
  font-size: 32px;
  line-height: 46px;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
  opacity: 0.8;
}

@media (min-width: 1024px) {
  .page-header {
    font-size: 8rem;
    line-height: 1;
    line-height: 185px;
  }
}

.page-sub-header {
  position: absolute;
  bottom: 0.5rem;
  text-align: center;
  font-family: Branch;
  font-size: 1.25rem;
  line-height: 1.75rem;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
  opacity: 0.8;
}

@media (min-width: 1024px) {
  .page-sub-header {
    bottom: 10vw;
    text-align: left;
    font-size: 64px;
    line-height: 93px;
  }

  .li-separator::before {
    padding-left: 1.25rem;
    padding-right: 1.25rem;
    --tw-content: '|';
    content: var(--tw-content);
  }
}

.li-separator-mobile::before {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  --tw-content: '|';
  content: var(--tw-content);
}

@media (min-width: 1024px) {
  .li-sq-separator::before {
    padding-left: 1.25rem;
    padding-right: 1.25rem;
    --tw-content: '⬝';
    content: var(--tw-content);
  }

  .lg\:bottom-28 {
    bottom: 7rem;
  }

  .lg\:bottom-\[10vw\] {
    bottom: 10vw;
  }

  .lg\:bottom-\[16vw\] {
    bottom: 16vw;
  }

  .lg\:bottom-\[8vw\] {
    bottom: 8vw;
  }

  .lg\:left-40 {
    left: 10rem;
  }

  .lg\:top-\[50\%\] {
    top: 50%;
  }

  .lg\:col-span-2 {
    grid-column: span 2 / span 2;
  }

  .lg\:mb-24 {
    margin-bottom: 6rem;
  }

  .lg\:ml-40 {
    margin-left: 10rem;
  }

  .lg\:mr-40 {
    margin-right: 10rem;
  }

  .lg\:mt-24 {
    margin-top: 6rem;
  }

  .lg\:block {
    display: block;
  }

  .lg\:inline {
    display: inline;
  }

  .lg\:flex {
    display: flex;
  }

  .lg\:hidden {
    display: none;
  }

  .lg\:w-1\/2 {
    width: 50%;
  }

  .lg\:w-2\/4 {
    width: 50%;
  }

  .lg\:w-2\/5 {
    width: 40%;
  }

  .lg\:w-3\/5 {
    width: 60%;
  }

  .lg\:w-\[90\%\] {
    width: 90%;
  }

  .lg\:w-screen {
    width: 100vw;
  }

  .lg\:translate-y-\[-50\%\] {
    --tw-translate-y: -50%;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  }

  .lg\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .lg\:grid-cols-4 {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:gap-20 {
    gap: 5rem;
  }

  .lg\:border-l {
    border-left-width: 1px;
  }

  .lg\:border-r {
    border-right-width: 1px;
  }

  .lg\:border-gray-300 {
    --tw-border-opacity: 1;
    border-color: rgb(209 213 219 / var(--tw-border-opacity));
  }

  .lg\:pb-20 {
    padding-bottom: 5rem;
  }

  .lg\:pt-20 {
    padding-top: 5rem;
  }

  .lg\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .lg\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .lg\:text-8xl {
    font-size: 6rem;
    line-height: 1;
  }

  .lg\:text-9xl {
    font-size: 8rem;
    line-height: 1;
  }

  .lg\:text-\[32px\] {
    font-size: 32px;
  }

  .lg\:text-\[40px\] {
    font-size: 40px;
  }

  .lg\:text-\[64px\] {
    font-size: 64px;
  }

  .lg\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .lg\:leading-10 {
    line-height: 2.5rem;
  }

  .lg\:leading-6 {
    line-height: 1.5rem;
  }

  .lg\:leading-8 {
    line-height: 2rem;
  }

  .lg\:leading-9 {
    line-height: 2.25rem;
  }

  .lg\:leading-\[140px\] {
    line-height: 140px;
  }

  .lg\:leading-\[185px\] {
    line-height: 185px;
  }

  .lg\:leading-\[22\.26px\] {
    line-height: 22.26px;
  }

  .lg\:leading-\[26\.7px\] {
    line-height: 26.7px;
  }

  .lg\:leading-\[27px\] {
    line-height: 27px;
  }

  .lg\:leading-\[36\.77px\] {
    line-height: 36.77px;
  }

  .lg\:leading-\[46\.4px\] {
    line-height: 46.4px;
  }

  .lg\:leading-\[52\.2px\] {
    line-height: 52.2px;
  }

  .lg\:leading-\[58px\] {
    line-height: 58px;
  }

  .lg\:leading-\[93px\] {
    line-height: 93px;
  }

  .lg\:text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity));
  }
}

